[QMS-683] Fix alglib error on interpolation
[QMS-692] Trackpoints erroneously flaged invalid for short tracks (<50m)
[QMS-699] Fix writing to default config when using command line parameter -c
[QMS-706] Apply PNG file’s offset to user-defined waypoint icon from "External Icons" folder
[QMS-709] Adjust square zoom levels to fit EPSG:3857 tiles and other minor fix in Proj Wizard

V1.17.1
[QMS-547] Fixed: QMS freezes on zoom when activating multi-layered online maps
[QMS-622] Update BRouter setup (install from github)
[QMS-623] remove use of QTimer in BRouter startup error detection
[QMS-630] BRouter on-the-fly routing cannot be canceled
[QMS-649] Replace proj strings by EPSG code in CRS definitions
[QMS-654] MacOS build (changes to build scripts)

V1.17.0
[QMS-429] Bad OSM Tag formatting crashes QMS
[QMS-470] Windows build scripts: adapt for release v1.16.1
|QMS-476] Color the map by elevation
[QMS-480] QMapShack for macOS build scripts
[QMS-483] Add alpha transparency based hillshading
[QMS-487] Add tooltips for DEM controls
[QMS-489] Track selection 0-index bug
[QMS-490] Potentially incorrect slope shading opacity for slope value NOFLOAT
[QMS-499] Disable close action for projects with autom. sync. to device
[QMS-503] BRouter Version 1.6.3 local setup fails
[QMS-507] QMapTool: Early projection validity check 
[QMS-517] GPX-tracks are not displayed if lon or lat are invariant over the entire track
[QMS-518] Enable edit for timestamps of waypoints
[QMS-522] Change URLs of built-in maps from http to https
[QMS-526] Fix deprecation warnings
[QMS-535] Loading a map view does not reset the layer checkboxes
[QMS-537] Moving items to drop zone removes them from workspace
[QMS-540] MacOS: Updating bundle with GEOS and proper GDAS binaries
[QMS-542] Changed drag`n drop in workspace
[QMS-551] Set QDateTime short format back to Qt::ISODate
[QMS-555] Rearrange widgets in IFilterSpeedCycle.ui for small screen resolution
[QMS-557] Add FilterSplitTrack