@@ -8,6 +8,7 @@ V1.XX.X
 [QMS-699] Fix writing to default config when using command line parameter -c
 [QMS-706] Apply PNG file’s offset to user-defined waypoint icon from "External Icons" folder
 [QMS-709] Adjust square zoom levels to fit EPSG:3857 tiles and other minor fix in Proj Wizard
+[QMS-715] Remove duplicate tile map server requests for the same tile, allow HTTP(S) redirection
 
 V1.17.1
 [QMS-547] Fixed: QMS freezes on zoom when activating multi-layered online maps
